<resources>
    <string name="app_name">CA1_Assignment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="txtMsg1">Don\'t have an account? Register here!</string>
    <string name="bold"><b>Description: </b></string>
    <string name="link"><b>Link: </b></string>
</resources>