<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DFE4DD"
    tools:context=".Login">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="509dp"
        android:layout_height="273dp"
        android:layout_marginBottom="458dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/splash"
        tools:ignore="MissingConstraints"
        android:contentDescription="TODO" />

    <EditText
        android:id="@+id/username"
        android:layout_width="340dp"
        android:layout_height="48dp"
        android:hint="@string/username"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.633"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.391" />

    <EditText
        android:id="@+id/password"
        android:layout_width="340dp"
        android:layout_height="48dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        app:layout_constraintBottom_toTopOf="@+id/btnAddContact"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.633"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <Button
        android:id="@+id/btnAddContact"
        android:layout_width="248dp"
        android:layout_height="51dp"
        android:backgroundTint="#4974A5"
        android:text="@string/login"
        android:textColor="#ffffff"
        app:cornerRadius="25dp"
        android:onClick="onClick"
        app:layout_constraintBottom_toTopOf="@+id/btnListAll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnListAll"
        android:layout_width="248dp"
        android:layout_height="51dp"
        android:layout_marginBottom="12dp"
        android:text="@string/register"
        android:backgroundTint="#4974A5"
        android:textColor="#ffffff"
        app:cornerRadius="25dp"
        android:onClick="onClick"
        app:layout_constraintBottom_toTopOf="@+id/textReg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textReg"
        android:layout_width="247dp"
        android:layout_height="47dp"
        android:layout_marginBottom="156dp"
        android:text="@string/txtMsg1"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>