<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DFE4DD"
    tools:context=".Register">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="509dp"
        android:layout_height="273dp"
        android:layout_marginBottom="458dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/splash"
        tools:ignore="MissingConstraints"
        android:contentDescription="TODO" />

    <EditText
        android:id="@+id/edtext_name"
        android:layout_width="340dp"
        android:layout_height="48dp"
        android:hint="@string/username"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.633"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.391" />

    <EditText
        android:id="@+id/edtext_password"
        android:layout_width="340dp"
        android:layout_height="48dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.633"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtext_name" />

    <Button
        android:id="@+id/btnAddNewContactInfo"
        android:layout_width="248dp"
        android:layout_height="51dp"
        android:backgroundTint="#4974A5"
        android:onClick="onClick"
        android:text="@string/register"
        android:textColor="#ffffff"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.552"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/location"
        android:layout_width="340dp"
        android:layout_height="51dp"
        android:layout_marginTop="2dp"
        android:contentDescription="Location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtext_password" />



</androidx.constraintlayout.widget.ConstraintLayout>